# AoC21

./: .gitignore
01.1- Sonar Sweep/: Cargo.toml
01.2- Sonar Sweep/: Cargo.toml
03- Binary Diagnostic/: Cargo.toml
04- Giant Squid/src/: bingo.rs  lib.rs
05- Hydrothermal Venture/: Cargo.toml
05- Hydrothermal Venture/src/: lib.rs
06- Lanternfish/src/: lib.rs
07- The Treachery of Whales/src/: lib.rs
08- Seven Segment Search/src/: lib.rs
09- Smoke Basin/: Cargo.toml
09- Smoke Basin/src/: lib.rs
10- Syntax Scoring/: Cargo.toml
10- Syntax Scoring/src/: lib.rs
11- Dumbo Octopus/: Cargo.toml
11- Dumbo Octopus/src/: lib.rs
12- Passage Pathing/src/: lib.rs
13- Transparent Origami/: Cargo.toml
13- Transparent Origami/src/: lib.rs
14- Extended Polymerization/: Cargo.toml
14- Extended Polymerization/src/: lib.rs
15- Chiton/: .gitignore  Cargo.toml
15- Chiton/src/: lib.rs
15- Chiton/state/: bmp2mp4.sh
16- Packet Decoder/: Cargo.toml
16- Packet Decoder/src/: lib.rs
17- Trick Shot/: Cargo.toml
17- Trick Shot/src/: lib.rs
18- Snailfish/: Cargo.toml
18- Snailfish/src/: lib.rs
19- Beacon Scanner/: Cargo.toml
19- Beacon Scanner/src/: lib.rs
20- Trench Map/: Cargo.toml
20- Trench Map/src/: lib.rs
21- Dirac Dice/: Cargo.toml
21- Dirac Dice/src/: lib.rs
22- Reactor Reboot/: Cargo.toml
22- Reactor Reboot/src/: lib.rs
23- Amphipod/: Cargo.toml
23- Amphipod/src/: lib.rs
24- Arithmetic Logic Unit/: Cargo.toml  alu.vim  input
24- Arithmetic Logic Unit/src/: lib.rs
25- Sea Cucumber/: Cargo.toml
(+1 files in other folders)
