[package]
name = "chiton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid = "0.6"
itertools = "0.10"
pathfinding = { version = "3.0", optional = true }
rustbitmap = { version = "0.1", optional = true }

[features]
verbose = []
bitmap = ["rustbitmap"]
minheap = []
